--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Backend server for e-learning platform",
   "main": "server.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only server.ts",
+    "format": "prettier --write \"{src,test}/**/*.{js,ts}\"",
+    "lint": "eslint \"src/**/*.{ts,js}\" --fix"
   },
   "author": "Melah Ghislain",
   "license": "ISC",
@@ -26,6 +28,10 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
